5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1674_1879.log
== SUBMITION (2019-05-02 00:43:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = a - 1/4*b
print(a,'extras e',b,"de falta")
print('R$',h)
-- EXECUTION TIME:
0.158133
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 415.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 375.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 289.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:44:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
print(a,'extras e',b,"de falta")
print('R$',h)
-- EXECUTION TIME:
0.142865
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 415.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 375.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 289.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:44:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
print(a,'extras e',b,"de falta")
print('R$',h)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:47:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
else:
print(a,'extras e',b,"de falta")
print('R$ 500')
-- EXECUTION TIME:
0.135608
-- ERROR:
  File "/home/codebench/codes/1674/1879/main.py", line 9
    print(a,'extras e',b,"de falta")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:49:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
else:
print(a,'extras e',b,"de falta")
print('R$ 500')
-- ERROR:
File "XXXX", line 9
    print(a,'extras e',b,"de falta")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
-- EXECUTION TIME:
0.223526
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 100
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:50:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:50:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
-- EXECUTION TIME:
0.149769
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:50:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - 1/4*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:52:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
-- EXECUTION TIME:
0.150007
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:54:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:55:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$ 500')
else:
	print(a,'extras e',b,"de falta")
	print('R$ 100')
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:56:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$',500)
else:
	print(a,'extras e',b,"de falta")
	print('R$',100)
-- EXECUTION TIME:
0.205063
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:56:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$',500)
else:
	print(a,'extras e',b,"de falta")
	print('R$',100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:56:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$',500)
else:
	print(a,'extras e',b,"de falta")
	print('R$',100)
-- EXECUTION TIME:
0.152171
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:56:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input('horas extras: '))
b = float(input('horas de falta: '))
h = round(a - (1/4)*b,2)
if h>400:
	print(a,'extras e',b,"de falta")
	print('R$',500.0)
else:
	print(a,'extras e',b,"de falta")
	print('R$',100.0)
-- EXECUTION TIME:
0.186452
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
